--- a/res/layout/vario.xml
+++ b/res/layout/vario.xml
@@ -403,7 +403,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
-                android:gravity="right|bottom"
+                android:gravity="right|top"
                 android:orientation="vertical" >
 
                 <!-- 1st info line -->
@@ -448,8 +448,8 @@
                             <TextView
                                 android:id="@+id/altMeasure"
                                 android:layout_width="65sp"
-                                android:layout_marginRight="5sp"
                                 android:layout_height="match_parent"
+                                android:layout_marginRight="5sp"
                                 android:gravity="right|center_vertical"
                                 android:text="@string/meters"
                                 android:textSize="16sp" >
@@ -543,9 +543,9 @@
                                 android:id="@+id/gspeedMeasure"
                                 android:layout_width="55dp"
                                 android:layout_height="match_parent"
+                                android:layout_marginRight="5sp"
                                 android:gravity="center"
                                 android:text="@string/kmh"
-                                android:layout_marginRight="5sp"
                                 android:textSize="14sp" >
                             </TextView>
                         </LinearLayout>
@@ -602,18 +602,17 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:baselineAligned="false"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp"
+                    android:background="@drawable/round_border"
                     android:orientation="horizontal" >
 
-                    <TextView
-                        android:id="@+id/clock"
-                        android:layout_width="fill_parent"
+                    <org.avario.ui.view.AltitudeView
+                        android:id="@+id/altitudeLayout"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="@string/nan"
-                        android:textSize="25sp" >
-                    </TextView>
+                        android:background="#EEEEEE" 
+                        android:orientation="horizontal"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
