--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -14,7 +14,7 @@
                 android:title="@string/volume_t" />
 
             <CheckBoxPreference
-                android:defaultValue="true"
+                android:defaultValue="false"
                 android:key="use_speach"
                 android:summary="@string/use_speach_s"
                 android:title="@string/use_speach_t" />
