--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -125,6 +125,12 @@
             android:key="auto_track"
             android:summary="@string/auto_track_s"
             android:title="@string/auto_track_t" />
+        
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="use_sensbox"
+            android:summary="@string/use_sensbox_s"
+            android:title="@string/use_sensbox_t" />
 
         <android.preference.Preference
             android:defaultValue=""
