--- a/res/layout/vario.xml
+++ b/res/layout/vario.xml
@@ -572,7 +572,7 @@
                         android:orientation="horizontal" >
 
                         <TextView
-                            android:id="@+id/kmValue"
+                            android:id="@+id/ratio"
                             android:layout_width="fill_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
